# speaknspell_analysis

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
kaitai/: Makefile  speak_and_spell_2019.ksy
src/spana/: compile_voice_pack.py  constructor.py  decode_sounds_to_wav.py  encoder.py  extract_sounds.py  file_paths.py  known_phrases.csv  live_trace.py  offset_table.py  parse_trace.py  split_file.py  util.py
tests/: kaitai_test.py  test_encoder_decoder.py  test_offset_table.py  test_parse.py
